    - In Py3 classes no longer need to be listed as deriving from object.
    - Remove deprecated check for Task subclasses needing a needs_execute
      method - this is now enforced via an abstract base class, so the
      check and test is no longer needed.
    - Close various logfiles (trace, cache, taskmastertrace, configure)
      when done using atexit calls.



RELEASE 3.1.2 - Mon, 17 Dec 2019 02:06:27 +0000

  From Edoardo Bezzeccheri
    - Added debug option "action_timestamps" which outputs to stdout the absolute start and end time for each target.

  From Rob Boehne
    - Fix suncxx tool (Oracle Studio compiler) when using Python 3.  Previously would throw an exception.
      Resolved by properly handling tool version string output as unicode.

  From Tim Gates
    - Resolved a typo in engine.SCons.Tool

  From Adam Gross:
    - Resolved a race condition in multithreaded Windows builds with Python 2
      in the case where a child process is spawned while a Python action has a
      file open. Original author: Ryan Beasley.
    - Added memoization support for calls to Environment.Value() in order to
	  improve performance of repeated calls.


  From Jason Kenny
    - Update Command() function to accept target_scanner, source_factory, and target_factory arguments.
      This makes Command act more like a one-off builder.

  From Ivan Kravets
    - Added support for "-imacros" to ParseFlags

  From Jacek Kuczera:
    - Fix CheckFunc detection code for Visual 2019. Some functions
      (e.g. memmove) were incorrectly recognized as not available.

  From Jakub Kulik
    - Fix stacktrace when using SCons with Python 3.5+ and SunOS/Solaris related tools.

  From Philipp Maierhöfer:
    - Avoid crash with UnicodeDecodeError on Python 3 when a Latex log file in
      non-UTF-8 encoding (e.g. containing umlauts in Latin-1 encoding when
      the fontenc package is included with \usepackage[T1]{fontenc}) is read.

  From Mathew Robinson: